@@ -143,6 +143,7 @@
     "print_options"
     "print_rules"
     "print_simpset"
+    "print_state"
     "print_statement"
     "print_syntax"
     "print_tcset"
@@ -267,6 +268,7 @@
     "kill"
     "kill_thy"
     "linear_undo"
+    "pr"
     "pretty_setmargin"
     "quit"
     "remove_thy"
@@ -286,7 +288,6 @@
     "header"
     "help"
     "locale_deps"
-    "pr"
     "prf"
     "print_abbrevs"
     "print_antiquotations"
@@ -311,6 +312,7 @@
     "print_options"
     "print_rules"
     "print_simpset"
+    "print_state"
     "print_statement"
     "print_syntax"
     "print_tcset"
