@@ -206,6 +206,7 @@
     "print_quotmapsQ3"
     "print_rules"
     "print_simpset"
+    "print_state"
     "print_statement"
     "print_syntax"
     "print_theorems"
@@ -374,6 +375,7 @@
     "kill"
     "kill_thy"
     "linear_undo"
+    "pr"
     "pretty_setmargin"
     "quit"
     "remove_thy"
@@ -398,7 +400,6 @@
     "help"
     "locale_deps"
     "nitpick"
-    "pr"
     "prf"
     "print_abbrevs"
     "print_antiquotations"
@@ -435,6 +436,7 @@
     "print_quotmapsQ3"
     "print_rules"
     "print_simpset"
+    "print_state"
     "print_statement"
     "print_syntax"
     "print_theorems"
